; ModuleID = '/home/carl/AnghaBench/systemd/src/login/extr_logind-seat-dbus.c_property_get_idle_hint.c'
source_filename = "/home/carl/AnghaBench/systemd/src/login/extr_logind-seat-dbus.c_property_get_idle_hint.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [2 x i8] c"b\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, i8*, i8*, i32*, i8*, i32*)* @property_get_idle_hint to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @property_get_idle_hint(i32* %0, i8* %1, i8* %2, i8* %3, i32* %4, i8* %5, i32* %6) #0 {
  %8 = alloca i32*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i8*, align 8
  %14 = alloca i32*, align 8
  %15 = alloca i32*, align 8
  store i32* %0, i32** %8, align 8
  store i8* %1, i8** %9, align 8
  store i8* %2, i8** %10, align 8
  store i8* %3, i8** %11, align 8
  store i32* %4, i32** %12, align 8
  store i8* %5, i8** %13, align 8
  store i32* %6, i32** %14, align 8
  %16 = load i8*, i8** %13, align 8
  %17 = bitcast i8* %16 to i32*
  store i32* %17, i32** %15, align 8
  %18 = load i32*, i32** %8, align 8
  %19 = call i32 @assert(i32* %18)
  %20 = load i32*, i32** %12, align 8
  %21 = call i32 @assert(i32* %20)
  %22 = load i32*, i32** %15, align 8
  %23 = call i32 @assert(i32* %22)
  %24 = load i32*, i32** %12, align 8
  %25 = load i32*, i32** %15, align 8
  %26 = call i64 @seat_get_idle_hint(i32* %25, i32* null)
  %27 = icmp sgt i64 %26, 0
  %28 = zext i1 %27 to i32
  %29 = call i32 @sd_bus_message_append(i32* %24, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), i32 %28)
  ret i32 %29
}

declare dso_local i32 @assert(i32*) #1

declare dso_local i32 @sd_bus_message_append(i32*, i8*, i32) #1

declare dso_local i64 @seat_get_idle_hint(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
